<resources>
    <string name="app_name">SumOfUs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <color name="red">#FF0000</color>
    <color name="orange">#FFA500</color>
    <color name="white">#FFFFFF</color>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="title_activity_campaign_detail">CampaignDetailActivity</string>
    <string name="title_activity_add_new_campaign">AddNewCampaignActivity</string>
    <string name="title_activity_sign_petition">SignPetitionActivity</string>
    <string name="parse_app_id">LCPA3eHqb1CyiP2pmZGdDXw6I54pZKNCoxTGAsTt</string>
    <string name="parse_client_key">hweFBlma45UrDKmcRNSlcdG7Fidp6lST0Siu8tcx</string>
    <string name="facebook_app_id">1692972167639713</string>

    <string name="take_action">Take Action</string>
    <string name="create_campaign">Create Campaign</string>

    <string name="campaign_title">Title *</string>
    <string name="campaign_overview">Overview *</string>
    <string name="campaign_description">Description *</string>
    <string name="campaign_sign_message">Suggested action message to support</string>
    <string name="campaign_goal">Goal (number of signatures)</string>
    <string name="campaign_url">Your campaign website</string>
    <string name="image_url">Campaign image URL (jpg or png)</string>

    <string-array name="category_array">
        <item>Support individual</item>
        <item>Corruption awareness</item>
        <item>Share good news</item>
        <item>Promote common good</item>
    </string-array>

    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="title_activity_user_profile">UserProfile</string>

    <!-- Strings related to login -->
    <string name="signup">Sign up</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="logout">Log Out</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>

</resources>
